@@ -7,11 +7,17 @@ What's New in Python 3.3.0 Beta 1?
 
 *Release date: TBD*
 
+Library
+-------
+
+- Issue #14963: Convert contextlib.ExitStack.__exit__ to use an iterative
+  algorithm (Patch by Alon Horev)
+
 Tests
 -----
 
 - Issue #14963 (partial): Add test cases for exception handling behaviour
-  in contextlib.ContextStack (Initial patch by Alon Horev)
+  in contextlib.ExitStack (Initial patch by Alon Horev)
 
 What's New in Python 3.3.0 Alpha 4?
 ===================================
